compiler/testData/diagnostics/tests/enum/enumNoComma.kt
enum class MyEnum {
    <!ENUM_ENTRY_USES_DEPRECATED_OR_NO_DELIMITER!>A<!>
    B
}